--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@octokit/rest": "^20.0.2",
     "archiver": "^7.0.1",
     "body-parser": "^1.20.2",
     "express": "^4.21.2",
