--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "archiver": "^7.0.1",
     "body-parser": "^1.20.2",
     "express": "^4.21.2",
+    "node-fetch": "^2.6.7",
     "simple-git": "^3.30.0"
   }
 }
