--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@octokit/rest": "^20.0.2",
     "archiver": "^7.0.1",
     "body-parser": "^1.20.2",
-    "express": "^4.21.2",
-    "simple-git": "^3.30.0"
+    "express": "^4.21.2"
   }
 }
